--- a/_posts/2016-04-27-test-post.md
+++ b/_posts/2016-04-27-test-post.md
@@ -1,6 +1,8 @@
 ---
-layout: single
 title: Blogging Like a Hacker
-tags: test,testing
+tags:
+    - test
+    - test2
+layout: single
 ---
 This is a test post!
